Bug 1846465 - [devtools] Make codemirror 5 built-in search UI persistent. r=devtools-reviewers,ochameau.
Overriding the search shortcut allows us to execute the findPersistent command,
which prevents the search input to be closed when the user hit Enter.

A test is added to cover the new functionality.

Differential Revision: https://phabricator.services.mozilla.com/D237232

--- a/devtools/client/shared/sourceeditor/codemirror/mozilla.css
+++ b/devtools/client/shared/sourceeditor/codemirror/mozilla.css
@@ -113,6 +113,29 @@
   background-color: var(--theme-contrast-background-alpha);
 }
 
+/* CodeMirror 5 search addon input */
+.cm5-search-container {
+  display: flex;
+  padding: 4px 2px;
+
+  .CodeMirror-dialog:has(> &) {
+    background-color: var(--theme-body-background);
+    /* remove padding on the dialog so it's easier to style the focus indicator */
+    padding: 0;
+  }
+
+  .cm5-search-input {
+    margin-inline: 1em;
+    flex-grow: 1;
+  }
+
+  &:focus-within {
+    outline: var(--theme-focus-outline);
+    outline-offset: -2px;
+  }
+}
+
+
 /* CodeMirror dialogs styling */
 
 .CodeMirror-dialog {
